bin/testsuite/tests/compiler/src/errors/compiler897.swg
#global testerror "Err0604"
func arithmeticMean(numbers: f32...) {}

#test
{
    arithmeticMean(true, 2)
}
